cmake_minimum_required(VERSION 3.28)
project(untitled5)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled5 main.cpp
        Condiment.h
        Ketchup.h
        Ketchup.cpp
        Mustard.h
        Mustard.cpp
        Relish.h
        Relish.cpp
        Inventory.h
        Inventory.cpp
        Inventory.cpp
        main.cpp
)
